@@ -1,38 +1,24 @@
 package com.example.bulletin.unit.domain.entity.category;
 
-import com.example.bulletin.application.mapper.CategoryMapper;
 import com.example.bulletin.domain.entity.Category;
 import com.example.bulletin.domain.entity.Characteristic;
-import com.example.bulletin.domain.vo.CategoryData;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@SpringBootTest
 public class CategoryUpdateTests {
-
-    @Autowired
-    private CategoryMapper mapper;
 
     @Test
     public void shouldRename() {
         // Arrange
         Category category = Category.createRoot("Name 1");
         String newName = "new name";
-        CategoryData expected = CategoryData.builder()
-                .name(newName)
-                .parentId(null)
-                .leaf(false)
-                .build();
 
         // Act
-        Category renamedCategory = category.rename(newName);
-        CategoryData actual = mapper.toData(renamedCategory);
+        category.rename(newName);
 
         // Assert
-        assertEquals(expected.getName(), actual.getName());
+        assertEquals(newName, category.getName());
     }
 
     @Test
@@ -45,9 +31,12 @@ public class CategoryUpdateTests {
         category.addCharacteristic(characteristicName);
 
         // Assert
-        assertFalse(category.getCharacteristics().isEmpty());
+        assertFalse(category.getCharacteristics()
+                .isEmpty());
         assertEquals(characteristicName,
-                category.getCharacteristics().get(0).getName());
+                category.getCharacteristics()
+                        .getFirst()
+                        .getName());
     }
 
     @Test
@@ -61,7 +50,8 @@ public class CategoryUpdateTests {
         category.removeCharacteristic(characteristic);
 
         // Assert
-        assertTrue(category.getCharacteristics().isEmpty());
+        assertTrue(category.getCharacteristics()
+                .isEmpty());
     }
 
     @Test
